--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,10 @@
 site_name: DDEV-Local Documentation
+site_author: Kamil Berke Demirci
+docs_dir: docs/content
 nav:
   - Home: index.md
   - About: about.md
 theme:
   name: material
+plugins:
+  - search
